updated animation, extended ArrayList by adding getLast() method